# ChangeLog for net-misc/openssh
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/openssh/ChangeLog,v 1.449 2012/06/02 18:07:02 vapier Exp $

  02 Jun 2012; Mike Frysinger <vapier@gentoo.org> openssh-5.9_p1-r4.ebuild:
  Mark alpha/ia64/s390/sh/sparc stable #396075.

  29 May 2012; Alexis Ballier <aballier@gentoo.org> openssh-6.0_p1.ebuild:
  keyword ~amd64-fbsd

  29 May 2012; Richard Yao <ryao@gentoo.org>
  +files/openssh-6.0_p1-fix-freebsd-compilation.patch, openssh-6.0_p1.ebuild:
  Fix build failure on Gentoo FreeBSD 9, written by naota, reviewed by
  xarthisius, approved by Chainsaw, bug #391011

  23 May 2012; Mike Frysinger <vapier@gentoo.org> openssh-5.5_p1-r2.ebuild,
  openssh-5.6_p1-r2.ebuild, openssh-5.7_p1-r1.ebuild, openssh-5.8_p1-r1.ebuild,
  openssh-5.8_p2-r1.ebuild, openssh-5.8_p2.ebuild, openssh-5.9_p1-r3.ebuild,
  openssh-5.9_p1-r4.ebuild, openssh-6.0_p1.ebuild:
  Inherit user eclass for enewuser/etc...

  17 May 2012; Mike Frysinger <vapier@gentoo.org>
  +files/openssh-6.0_p1-test.patch, openssh-6.0_p1.ebuild:
  Add fix for POSIX test compat #391011.

  08 May 2012; Brent Baude <ranger@gentoo.org> openssh-5.9_p1-r4.ebuild:
  Marking openssh-5.9_p1-r4 ppc64 for bug 396075

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> openssh-5.5_p1-r2.ebuild,
  openssh-5.6_p1-r2.ebuild, openssh-5.7_p1-r1.ebuild, openssh-5.8_p1-r1.ebuild,
  openssh-5.8_p2.ebuild, openssh-5.8_p2-r1.ebuild, openssh-5.9_p1-r3.ebuild,
  openssh-5.9_p1-r4.ebuild, openssh-6.0_p1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  03 May 2012; Mike Frysinger <vapier@gentoo.org> openssh-6.0_p1.ebuild:
  Enable locale env var passing by default #367017 by Michael.

*openssh-6.0_p1 (30 Apr 2012)

  30 Apr 2012; Mike Frysinger <vapier@gentoo.org>
  +files/openssh-6.0_p1-hpn-progressmeter.patch,
  +files/openssh-6.0_p1-x509-glue.patch,
  +files/openssh-6.0_p1-x509-hpn-glue.patch, +openssh-6.0_p1.ebuild: